# file2constexpr

./: CMakeLists.txt  LICENSE  README.md
include/: CmdResponses.hpp  DirectoryHelper.hpp  ReadInput.hpp  WriteHeader.hpp  output.h
src/: main.cpp
src/constexpr/: BOOL.txt  FLOATS.txt  STRINGS.txt
